testdata/testdata.json
{
    "apiVersion": "v1",
    "items": [
        {
            "apiVersion": "v1",
            "kind": "Pod",
            "metadata": {
                "creationTimestamp": "2018-11-02T23:53:21Z",
                "labels": {
                    "app": "httpd"
                },
                "name": "httpd",
                "namespace": "egress-isolated",
                "resourceVersion": "420940",
                "selfLink": "/api/v1/namespaces/egress-isolated/pods/httpd",
                "uid": "7ad9b07f-defa-11e8-9699-08002710109d"
            },
            "spec": {
                "containers": [
                    {
                        "image": "centos/httpd-24-centos7",
                        "imagePullPolicy": "Always",
                        "name": "httpd",
                        "ports": [
                            {
                                "containerPort": 8080,
                                "protocol": "TCP"
                            }
                        ],
                        "resources": {},
                        "terminationMessagePath": "/dev/termination-log",
                        "terminationMessagePolicy": "File",
                        "volumeMounts": [
                            {
                                "mountPath": "/var/run/secrets/kubernetes.io/serviceaccount",
                                "name": "default-token-tzxrr",
                                "readOnly": true
                            }
                        ]
                    }
                ],
                "dnsPolicy": "ClusterFirst",
                "nodeName": "minikube",
                "restartPolicy": "Always",
                "schedulerName": "default-scheduler",
                "securityContext": {},
                "serviceAccount": "default",
                "serviceAccountName": "default",
                "terminationGracePeriodSeconds": 30,
                "tolerations": [
                    {
                        "effect": "NoExecute",
                        "key": "node.kubernetes.io/not-ready",
                        "operator": "Exists",
                        "tolerationSeconds": 300
                    },
                    {
                        "effect": "NoExecute",
                        "key": "node.kubernetes.io/unreachable",
                        "operator": "Exists",
                        "tolerationSeconds": 300
                    }
                ],
                "volumes": [
                    {
                        "name": "default-token-tzxrr",
                        "secret": {
                            "defaultMode": 420,
                            "secretName": "default-token-tzxrr"
                        }
                    }
                ]
            },
            "status": {
                "conditions": [
                    {
                        "lastProbeTime": null,
                        "lastTransitionTime": "2018-11-02T23:53:21Z",
                        "status": "True",
                        "type": "Initialized"
                    },
                    {
                        "lastProbeTime": null,
                        "lastTransitionTime": "2018-11-02T23:53:21Z",
                        "message": "containers with unready status: [httpd]",
                        "reason": "ContainersNotReady",
                        "status": "False",
                        "type": "Ready"
                    },
                    {
                        "lastProbeTime": null,
                        "lastTransitionTime": "2018-11-02T23:53:21Z",
                        "status": "True",
                        "type": "PodScheduled"
                    }
                ],
                "containerStatuses": [
                    {
                        "image": "centos/httpd-24-centos7",
                        "imageID": "",
                        "lastState": {},
                        "name": "httpd",
                        "ready": false,
                        "restartCount": 0,
                        "state": {
                            "waiting": {
                                "reason": "ContainerCreating"
                            }
                        }
                    }
                ],
                "hostIP": "10.0.2.15",
                "phase": "Pending",
                "qosClass": "BestEffort",
                "startTime": "2018-11-02T23:53:21Z"
            }
        },
        {
            "apiVersion": "v1",
            "kind": "Pod",
            "metadata": {
                "creationTimestamp": "2018-11-02T23:53:21Z",
                "labels": {
                    "app": "httpd"
                },
                "name": "httpd",
                "namespace": "global",
                "resourceVersion": "420921",
                "selfLink": "/api/v1/namespaces/global/pods/httpd",
                "uid": "7a811fa4-defa-11e8-9699-08002710109d"
            },
            "spec": {
                "containers": [
                    {
                        "image": "centos/httpd-24-centos7",
                        "imagePullPolicy": "Always",
                        "name": "httpd",
                        "ports": [
                            {
                                "containerPort": 8080,
                                "protocol": "TCP"
                            }
                        ],
                        "resources": {},
                        "terminationMessagePath": "/dev/termination-log",
                        "terminationMessagePolicy": "File",
                        "volumeMounts": [
                            {
                                "mountPath": "/var/run/secrets/kubernetes.io/serviceaccount",
                                "name": "default-token-sfjcj",
                                "readOnly": true
                            }
                        ]
                    }
                ],
                "dnsPolicy": "ClusterFirst",
                "nodeName": "minikube",
                "restartPolicy": "Always",
                "schedulerName": "default-scheduler",
                "securityContext": {},
                "serviceAccount": "default",
                "serviceAccountName": "default",
                "terminationGracePeriodSeconds": 30,
                "tolerations": [
                    {
                        "effect": "NoExecute",
                        "key": "node.kubernetes.io/not-ready",
                        "operator": "Exists",
                        "tolerationSeconds": 300
                    },
                    {
                        "effect": "NoExecute",
                        "key": "node.kubernetes.io/unreachable",
                        "operator": "Exists",
                        "tolerationSeconds": 300
                    }
                ],
                "volumes": [
                    {
                        "name": "default-token-sfjcj",
                        "secret": {
                            "defaultMode": 420,
                            "secretName": "default-token-sfjcj"
                        }
                    }
                ]
            },
            "status": {
                "conditions": [
                    {
                        "lastProbeTime": null,
                        "lastTransitionTime": "2018-11-02T23:53:21Z",
                        "status": "True",
                        "type": "Initialized"
                    },
                    {
                        "lastProbeTime": null,
                        "lastTransitionTime": "2018-11-02T23:53:21Z",
                        "message": "containers with unready status: [httpd]",
                        "reason": "ContainersNotReady",
                        "status": "False",
                        "type": "Ready"
                    },
                    {
                        "lastProbeTime": null,
                        "lastTransitionTime": "2018-11-02T23:53:21Z",
                        "status": "True",
                        "type": "PodScheduled"
                    }
                ],
                "containerStatuses": [
                    {
                        "image": "centos/httpd-24-centos7",
                        "imageID": "",
                        "lastState": {},
                        "name": "httpd",
                        "ready": false,
                        "restartCount": 0,
                        "state": {
                            "waiting": {
                                "reason": "ContainerCreating"
                            }
                        }
                    }
                ],
                "hostIP": "10.0.2.15",
                "phase": "Pending",
                "qosClass": "BestEffort",
                "startTime": "2018-11-02T23:53:21Z"
            }
        },
        {
            "apiVersion": "v1",
            "kind": "Pod",
            "metadata": {
                "creationTimestamp": "2018-11-02T23:53:21Z",
                "labels": {
                    "app": "httpd"
                },
                "name": "httpd",
                "namespace": "ingress-isolated",
                "resourceVersion": "420930",
                "selfLink": "/api/v1/namespaces/ingress-isolated/pods/httpd",
                "uid": "7aa9ebed-defa-11e8-9699-08002710109d"
            },
            "spec": {
                "containers": [
                    {
                        "image": "centos/httpd-24-centos7",
                        "imagePullPolicy": "Always",
                        "name": "httpd",
                        "ports": [
                            {
                                "containerPort": 8080,
                                "protocol": "TCP"
                            }
                        ],
                        "resources": {},
                        "terminationMessagePath": "/dev/termination-log",
                        "terminationMessagePolicy": "File",
                        "volumeMounts": [
                            {
                                "mountPath": "/var/run/secrets/kubernetes.io/serviceaccount",
                                "name": "default-token-z2nrj",
                                "readOnly": true
                            }
                        ]
                    }
                ],
                "dnsPolicy": "ClusterFirst",
                "nodeName": "minikube",
                "restartPolicy": "Always",
                "schedulerName": "default-scheduler",
                "securityContext": {},
                "serviceAccount": "default",
                "serviceAccountName": "default",
                "terminationGracePeriodSeconds": 30,
                "tolerations": [
                    {
                        "effect": "NoExecute",
                        "key": "node.kubernetes.io/not-ready",
                        "operator": "Exists",
                        "tolerationSeconds": 300
                    },
                    {
                        "effect": "NoExecute",
                        "key": "node.kubernetes.io/unreachable",
                        "operator": "Exists",
                        "tolerationSeconds": 300
                    }
                ],
                "volumes": [
                    {
                        "name": "default-token-z2nrj",
                        "secret": {
                            "defaultMode": 420,
                            "secretName": "default-token-z2nrj"
                        }
                    }
                ]
            },
            "status": {
                "conditions": [
                    {
                        "lastProbeTime": null,
                        "lastTransitionTime": "2018-11-02T23:53:21Z",
                        "status": "True",
                        "type": "Initialized"
                    },
                    {
                        "lastProbeTime": null,
                        "lastTransitionTime": "2018-11-02T23:53:21Z",
                        "message": "containers with unready status: [httpd]",
                        "reason": "ContainersNotReady",
                        "status": "False",
                        "type": "Ready"
                    },
                    {
                        "lastProbeTime": null,
                        "lastTransitionTime": "2018-11-02T23:53:21Z",
                        "status": "True",
                        "type": "PodScheduled"
                    }
                ],
                "containerStatuses": [
                    {
                        "image": "centos/httpd-24-centos7",
                        "imageID": "",
                        "lastState": {},
                        "name": "httpd",
                        "ready": false,
                        "restartCount": 0,
                        "state": {
                            "waiting": {
                                "reason": "ContainerCreating"
                            }
                        }
                    }
                ],
                "hostIP": "10.0.2.15",
                "phase": "Pending",
                "qosClass": "BestEffort",
                "startTime": "2018-11-02T23:53:21Z"
            }
        },
        {
            "apiVersion": "v1",
            "kind": "Pod",
            "metadata": {
                "creationTimestamp": "2018-11-02T23:53:21Z",
                "labels": {
                    "app": "httpd"
                },
                "name": "httpd",
                "namespace": "isolated",
                "resourceVersion": "420912",
                "selfLink": "/api/v1/namespaces/isolated/pods/httpd",
                "uid": "7a595aa6-defa-11e8-9699-08002710109d"
            },
            "spec": {
                "containers": [
                    {
                        "image": "centos/httpd-24-centos7",
                        "imagePullPolicy": "Always",
                        "name": "httpd",
                        "ports": [
                            {
                                "containerPort": 8080,
                                "protocol": "TCP"
                            }
                        ],
                        "resources": {},
                        "terminationMessagePath": "/dev/termination-log",
                        "terminationMessagePolicy": "File",
                        "volumeMounts": [
                            {
                                "mountPath": "/var/run/secrets/kubernetes.io/serviceaccount",
                                "name": "default-token-sswfq",
                                "readOnly": true
                            }
                        ]
                    }
                ],
                "dnsPolicy": "ClusterFirst",
                "nodeName": "minikube",
                "restartPolicy": "Always",
                "schedulerName": "default-scheduler",
                "securityContext": {},
                "serviceAccount": "default",
                "serviceAccountName": "default",
                "terminationGracePeriodSeconds": 30,
                "tolerations": [
                    {
                        "effect": "NoExecute",
                        "key": "node.kubernetes.io/not-ready",
                        "operator": "Exists",
                        "tolerationSeconds": 300
                    },
                    {
                        "effect": "NoExecute",
                        "key": "node.kubernetes.io/unreachable",
                        "operator": "Exists",
                        "tolerationSeconds": 300
                    }
                ],
                "volumes": [
                    {
                        "name": "default-token-sswfq",
                        "secret": {
                            "defaultMode": 420,
                            "secretName": "default-token-sswfq"
                        }
                    }
                ]
            },
            "status": {
                "conditions": [
                    {
                        "lastProbeTime": null,
                        "lastTransitionTime": "2018-11-02T23:53:21Z",
                        "status": "True",
                        "type": "Initialized"
                    },
                    {
                        "lastProbeTime": null,
                        "lastTransitionTime": "2018-11-02T23:53:21Z",
                        "message": "containers with unready status: [httpd]",
                        "reason": "ContainersNotReady",
                        "status": "False",
                        "type": "Ready"
                    },
                    {
                        "lastProbeTime": null,
                        "lastTransitionTime": "2018-11-02T23:53:21Z",
                        "status": "True",
                        "type": "PodScheduled"
                    }
                ],
                "containerStatuses": [
                    {
                        "image": "centos/httpd-24-centos7",
                        "imageID": "",
                        "lastState": {},
                        "name": "httpd",
                        "ready": false,
                        "restartCount": 0,
                        "state": {
                            "waiting": {
                                "reason": "ContainerCreating"
                            }
                        }
                    }
                ],
                "hostIP": "10.0.2.15",
                "phase": "Pending",
                "qosClass": "BestEffort",
                "startTime": "2018-11-02T23:53:21Z"
            }
        },
        {
            "apiVersion": "v1",
            "kind": "Pod",
            "metadata": {
                "creationTimestamp": "2018-10-09T14:31:47Z",
                "generateName": "default-http-backend-59868b7dd6-",
                "labels": {
                    "addonmanager.kubernetes.io/mode": "Reconcile",
                    "app": "default-http-backend",
                    "pod-template-hash": "1542463882"
                },
                "name": "default-http-backend-59868b7dd6-bn9kd",
                "namespace": "kube-system",
                "ownerReferences": [
                    {
                        "apiVersion": "extensions/v1beta1",
                        "blockOwnerDeletion": true,
                        "controller": true,
                        "kind": "ReplicaSet",
                        "name": "default-http-backend-59868b7dd6",
                        "uid": "0db047f9-cbd0-11e8-bfda-08002710109d"
                    }
                ],
                "resourceVersion": "154375",
                "selfLink": "/api/v1/namespaces/kube-system/pods/default-http-backend-59868b7dd6-bn9kd",
                "uid": "0db6d042-cbd0-11e8-bfda-08002710109d"
            },
            "spec": {
                "containers": [
                    {
                        "image": "k8s.gcr.io/defaultbackend:1.4",
                        "imagePullPolicy": "IfNotPresent",
                        "livenessProbe": {
                            "failureThreshold": 3,
                            "httpGet": {
                                "path": "/healthz",
                                "port": 8080,
                                "scheme": "HTTP"
                            },
                            "initialDelaySeconds": 30,
                            "periodSeconds": 10,
                            "successThreshold": 1,
                            "timeoutSeconds": 5
                        },
                        "name": "default-http-backend",
                        "ports": [
                            {
                                "containerPort": 8080,
                                "protocol": "TCP"
                            }
                        ],
                        "resources": {
                            "limits": {
                                "cpu": "10m",
                                "memory": "20Mi"
                            },
                            "requests": {
                                "cpu": "10m",
                                "memory": "20Mi"
                            }
                        },
                        "terminationMessagePath": "/dev/termination-log",
                        "terminationMessagePolicy": "File",
                        "volumeMounts": [
                            {
                                "mountPath": "/var/run/secrets/kubernetes.io/serviceaccount",
                                "name": "default-token-gjrqf",
                                "readOnly": true
                            }
                        ]
                    }
                ],
                "dnsPolicy": "ClusterFirst",
                "nodeName": "minikube",
                "restartPolicy": "Always",
                "schedulerName": "default-scheduler",
                "securityContext": {},
                "serviceAccount": "default",
                "serviceAccountName": "default",
                "terminationGracePeriodSeconds": 60,
                "tolerations": [
                    {
                        "effect": "NoExecute",
                        "key": "node.kubernetes.io/not-ready",
                        "operator": "Exists",
                        "tolerationSeconds": 300
                    },
                    {
                        "effect": "NoExecute",
                        "key": "node.kubernetes.io/unreachable",
                        "operator": "Exists",
                        "tolerationSeconds": 300
                    }
                ],
                "volumes": [
                    {
                        "name": "default-token-gjrqf",
                        "secret": {
                            "defaultMode": 420,
                            "secretName": "default-token-gjrqf"
                        }
                    }
                ]
            },
            "status": {
                "conditions": [
                    {
                        "lastProbeTime": null,
                        "lastTransitionTime": "2018-10-09T14:31:47Z",
                        "status": "True",
                        "type": "Initialized"
                    },
                    {
                        "lastProbeTime": null,
                        "lastTransitionTime": "2018-10-18T17:49:59Z",
                        "status": "True",
                        "type": "Ready"
                    },
                    {
                        "lastProbeTime": null,
                        "lastTransitionTime": "2018-10-09T14:31:47Z",
                        "status": "True",
                        "type": "PodScheduled"
                    }
                ],
                "containerStatuses": [
                    {
                        "containerID": "docker://ec201facde843952f020cc1e3b40d1fad883e251781db6e3111dc4fa1a131182",
                        "image": "k8s.gcr.io/defaultbackend:1.4",
                        "imageID": "docker-pullable://k8s.gcr.io/defaultbackend@sha256:865b0c35e6da393b8e80b7e3799f777572399a4cff047eb02a81fa6e7a48ed4b",
                        "lastState": {
                            "terminated": {
                                "containerID": "docker://e0c30ddfaa862fafb3f33216c1ae8f0213ed6b08f197ae6a426d348c2eb3a943",
                                "exitCode": 255,
                                "finishedAt": "2018-10-18T17:49:18Z",
                                "reason": "Error",
                                "startedAt": "2018-10-11T06:07:26Z"
                            }
                        },
                        "name": "default-http-backend",
                        "ready": true,
                        "restartCount": 2,
                        "state": {
                            "running": {
                                "startedAt": "2018-10-18T17:49:57Z"
                            }
                        }
                    }
                ],
                "hostIP": "10.0.2.15",
                "phase": "Running",
                "podIP": "172.17.0.5",
                "qosClass": "Guaranteed",
                "startTime": "2018-10-09T14:31:47Z"
            }
        },
        {
            "apiVersion": "v1",
            "kind": "Pod",
            "metadata": {
                "annotations": {
                    "kubernetes.io/config.hash": "18cf35e55ae76d66fae38eddd19dd181",
                    "kubernetes.io/config.mirror": "18cf35e55ae76d66fae38eddd19dd181",
                    "kubernetes.io/config.seen": "2018-10-18T17:49:37.304077253Z",
                    "kubernetes.io/config.source": "file",
                    "scheduler.alpha.kubernetes.io/critical-pod": ""
                },
                "creationTimestamp": "2018-10-18T17:49:58Z",
                "labels": {
                    "component": "etcd",
                    "tier": "control-plane"
                },
                "name": "etcd-minikube",
                "namespace": "kube-system",
                "resourceVersion": "154393",
                "selfLink": "/api/v1/namespaces/kube-system/pods/etcd-minikube",
                "uid": "3afc7a87-d2fe-11e8-9699-08002710109d"
            },
            "spec": {
                "containers": [
                    {
                        "command": [
                            "etcd",
                            "--client-cert-auth=true",
                            "--trusted-ca-file=/var/lib/localkube/certs/etcd/ca.crt",
                            "--peer-trusted-ca-file=/var/lib/localkube/certs/etcd/ca.crt",
                            "--advertise-client-urls=https://127.0.0.1:2379",
                            "--peer-client-cert-auth=true",
                            "--data-dir=/data/minikube",
                            "--cert-file=/var/lib/localkube/certs/etcd/server.crt",
                            "--key-file=/var/lib/localkube/certs/etcd/server.key",
                            "--peer-cert-file=/var/lib/localkube/certs/etcd/peer.crt",
                            "--peer-key-file=/var/lib/localkube/certs/etcd/peer.key",
                            "--listen-client-urls=https://127.0.0.1:2379"
                        ],
                        "image": "k8s.gcr.io/etcd-amd64:3.1.12",
                        "imagePullPolicy": "IfNotPresent",
                        "livenessProbe": {
                            "exec": {
                                "command": [
                                    "/bin/sh",
                                    "-ec",
                                    "ETCDCTL_API=3 etcdctl --endpoints=127.0.0.1:2379 --cacert=/var/lib/localkube/certs//etcd/ca.crt --cert=/var/lib/localkube/certs//etcd/healthcheck-client.crt --key=/var/lib/localkube/certs//etcd/healthcheck-client.key get foo"
                                ]
                            },
                            "failureThreshold": 8,
                            "initialDelaySeconds": 15,
                            "periodSeconds": 10,
                            "successThreshold": 1,
                            "timeoutSeconds": 15
                        },
                        "name": "etcd",
                        "resources": {},
                        "terminationMessagePath": "/dev/termination-log",
                        "terminationMessagePolicy": "File",
                        "volumeMounts": [
                            {
                                "mountPath": "/data/minikube",
                                "name": "etcd-data"
                            },
                            {
                                "mountPath": "/var/lib/localkube/certs//etcd",
                                "name": "etcd-certs"
                            }
                        ]
                    }
                ],
                "dnsPolicy": "ClusterFirst",
                "hostNetwork": true,
                "nodeName": "minikube",
                "restartPolicy": "Always",
                "schedulerName": "default-scheduler",
                "securityContext": {},
                "terminationGracePeriodSeconds": 30,
                "tolerations": [
                    {
                        "effect": "NoExecute",
                        "operator": "Exists"
                    }
                ],
                "volumes": [
                    {
                        "hostPath": {
                            "path": "/data/minikube",
                            "type": "DirectoryOrCreate"
                        },
                        "name": "etcd-data"
                    },
                    {
                        "hostPath": {
                            "path": "/var/lib/localkube/certs//etcd",
                            "type": "DirectoryOrCreate"
                        },
                        "name": "etcd-certs"
                    }
                ]
            },
            "status": {
                "conditions": [
                    {
                        "lastProbeTime": null,
                        "lastTransitionTime": "2018-10-18T17:49:40Z",
                        "status": "True",
                        "type": "Initialized"
                    },
                    {
                        "lastProbeTime": null,
                        "lastTransitionTime": "2018-10-18T17:49:41Z",
                        "status": "True",
                        "type": "Ready"
                    },
                    {
                        "lastProbeTime": null,
                        "lastTransitionTime": "2018-10-18T17:49:40Z",
                        "status": "True",
                        "type": "PodScheduled"
                    }
                ],
                "containerStatuses": [
                    {
                        "containerID": "docker://d43099c4f305358f5e9770d114799ae05de92618c14e7e682e33482905687854",
                        "image": "k8s.gcr.io/etcd-amd64:3.1.12",
                        "imageID": "docker-pullable://k8s.gcr.io/etcd-amd64@sha256:68235934469f3bc58917bcf7018bf0d3b72129e6303b0bef28186d96b2259317",
                        "lastState": {},
                        "name": "etcd",
                        "ready": true,
                        "restartCount": 0,
                        "state": {
                            "running": {
                                "startedAt": "2018-10-18T17:49:41Z"
                            }
                        }
                    }
                ],
                "hostIP": "10.0.2.15",
                "phase": "Running",
                "podIP": "10.0.2.15",
                "qosClass": "BestEffort",
                "startTime": "2018-10-18T17:49:40Z"
            }
        },
        {
            "apiVersion": "v1",
            "kind": "Pod",
            "metadata": {
                "annotations": {
                    "kubernetes.io/config.hash": "3afaf06535cc3b85be93c31632b765da",
                    "kubernetes.io/config.mirror": "3afaf06535cc3b85be93c31632b765da",
                    "kubernetes.io/config.seen": "2018-10-04T18:42:27.679500889Z",
                    "kubernetes.io/config.source": "file"
                },
                "creationTimestamp": "2018-10-04T18:54:12Z",
                "labels": {
                    "component": "kube-addon-manager",
                    "kubernetes.io/minikube-addons": "addon-manager",
                    "version": "v8.6"
                },
                "name": "kube-addon-manager-minikube",
                "namespace": "kube-system",
                "resourceVersion": "154347",
                "selfLink": "/api/v1/namespaces/kube-system/pods/kube-addon-manager-minikube",
                "uid": "e2445947-c806-11e8-8ef3-08002710109d"
            },
            "spec": {
                "containers": [
                    {
                        "env": [
                            {
                                "name": "KUBECONFIG",
                                "value": "/var/lib/localkube/kubeconfig"
                            }
                        ],
                        "image": "k8s.gcr.io/kube-addon-manager:v8.6",
                        "imagePullPolicy": "IfNotPresent",
                        "name": "kube-addon-manager",
                        "resources": {
                            "requests": {
                                "cpu": "5m",
                                "memory": "50Mi"
                            }
                        },
                        "terminationMessagePath": "/dev/termination-log",
                        "terminationMessagePolicy": "File",
                        "volumeMounts": [
                            {
                                "mountPath": "/etc/kubernetes/",
                                "name": "addons",
                                "readOnly": true
                            },
                            {
                                "mountPath": "/var/lib/localkube/",
                                "name": "kubeconfig",
                                "readOnly": true
                            }
                        ]
                    }
                ],
                "dnsPolicy": "ClusterFirst",
                "hostNetwork": true,
                "nodeName": "minikube",
                "restartPolicy": "Always",
                "schedulerName": "default-scheduler",
                "securityContext": {},
                "terminationGracePeriodSeconds": 30,
                "tolerations": [
                    {
                        "effect": "NoExecute",
                        "operator": "Exists"
                    }
                ],
                "volumes": [
                    {
                        "hostPath": {
                            "path": "/etc/kubernetes/",
                            "type": ""
                        },
                        "name": "addons"
                    },
                    {
                        "hostPath": {
                            "path": "/var/lib/localkube/",
                            "type": ""
                        },
                        "name": "kubeconfig"
                    }
                ]
            },
            "status": {
                "conditions": [
                    {
                        "lastProbeTime": null,
                        "lastTransitionTime": "2018-10-18T17:49:40Z",
                        "status": "True",
                        "type": "Initialized"
                    },
                    {
                        "lastProbeTime": null,
                        "lastTransitionTime": "2018-10-18T17:49:41Z",
                        "status": "True",
                        "type": "Ready"
                    },
                    {
                        "lastProbeTime": null,
                        "lastTransitionTime": "2018-10-18T17:49:40Z",
                        "status": "True",
                        "type": "PodScheduled"
                    }
                ],
                "containerStatuses": [
                    {
                        "containerID": "docker://57e810f5b3f5ac6ed34e6c4109019cc399063bb5a40367079abd96d3bc4b6e4b",
                        "image": "k8s.gcr.io/kube-addon-manager:v8.6",
                        "imageID": "docker-pullable://k8s.gcr.io/kube-addon-manager@sha256:3519273916ba45cfc9b318448d4629819cb5fbccbb0822cce054dd8c1f68cb60",
                        "lastState": {
                            "terminated": {
                                "containerID": "docker://2fb73aca56ab6674e3dfeef4d272947e45139ffa2e602104a354a18799a174d0",
                                "exitCode": 255,
                                "finishedAt": "2018-10-18T17:49:18Z",
                                "reason": "Error",
                                "startedAt": "2018-10-11T06:07:11Z"
                            }
                        },
                        "name": "kube-addon-manager",
                        "ready": true,
                        "restartCount": 3,
                        "state": {
                            "running": {
                                "startedAt": "2018-10-18T17:49:41Z"
                            }
                        }
                    }
                ],
                "hostIP": "10.0.2.15",
                "phase": "Running",
                "podIP": "10.0.2.15",
                "qosClass": "Burstable",
                "startTime": "2018-10-18T17:49:40Z"
            }
        },
        {
            "apiVersion": "v1",
            "kind": "Pod",
            "metadata": {
                "annotations": {
                    "kubernetes.io/config.hash": "7229c7947055713886be4460f8e9a636",
                    "kubernetes.io/config.mirror": "7229c7947055713886be4460f8e9a636",
                    "kubernetes.io/config.seen": "2018-10-18T17:49:37.304078406Z",
                    "kubernetes.io/config.source": "file",
                    "scheduler.alpha.kubernetes.io/critical-pod": ""
                },
                "creationTimestamp": "2018-10-18T17:49:59Z",
                "labels": {
                    "component": "kube-apiserver",
                    "tier": "control-plane"
                },
                "name": "kube-apiserver-minikube",
                "namespace": "kube-system",
                "resourceVersion": "154395",
                "selfLink": "/api/v1/namespaces/kube-system/pods/kube-apiserver-minikube",
                "uid": "3b38df81-d2fe-11e8-9699-08002710109d"
            },
            "spec": {
                "containers": [
                    {
                        "command": [
                            "kube-apiserver",
                            "--admission-control=Initializers,NamespaceLifecycle,LimitRanger,ServiceAccount,DefaultStorageClass,DefaultTolerationSeconds,NodeRestriction,MutatingAdmissionWebhook,ValidatingAdmissionWebhook,ResourceQuota",
                            "--allow-privileged=true",
                            "--kubelet-preferred-address-types=InternalIP,ExternalIP,Hostname",
                            "--service-cluster-ip-range=10.96.0.0/12",
                            "--service-account-key-file=/var/lib/localkube/certs/sa.pub",
                            "--tls-cert-file=/var/lib/localkube/certs/apiserver.crt",
                            "--kubelet-client-certificate=/var/lib/localkube/certs/apiserver-kubelet-client.crt",
                            "--enable-bootstrap-token-auth=true",
                            "--requestheader-username-headers=X-Remote-User",
                            "--advertise-address=192.168.99.100",
                            "--tls-private-key-file=/var/lib/localkube/certs/apiserver.key",
                            "--secure-port=8443",
                            "--requestheader-client-ca-file=/var/lib/localkube/certs/front-proxy-ca.crt",
                            "--requestheader-group-headers=X-Remote-Group",
                            "--client-ca-file=/var/lib/localkube/certs/ca.crt",
                            "--proxy-client-key-file=/var/lib/localkube/certs/front-proxy-client.key",
                            "--insecure-port=0",
                            "--requestheader-extra-headers-prefix=X-Remote-Extra-",
                            "--requestheader-allowed-names=front-proxy-client",
                            "--kubelet-client-key=/var/lib/localkube/certs/apiserver-kubelet-client.key",
                            "--proxy-client-cert-file=/var/lib/localkube/certs/front-proxy-client.crt",
                            "--authorization-mode=Node,RBAC",
                            "--etcd-servers=https://127.0.0.1:2379",
                            "--etcd-cafile=/var/lib/localkube/certs/etcd/ca.crt",
                            "--etcd-certfile=/var/lib/localkube/certs/apiserver-etcd-client.crt",
                            "--etcd-keyfile=/var/lib/localkube/certs/apiserver-etcd-client.key"
                        ],
                        "image": "k8s.gcr.io/kube-apiserver-amd64:v1.10.0",
                        "imagePullPolicy": "IfNotPresent",
                        "livenessProbe": {
                            "failureThreshold": 8,
                            "httpGet": {
                                "host": "192.168.99.100",
                                "path": "/healthz",
                                "port": 8443,
                                "scheme": "HTTPS"
                            },
                            "initialDelaySeconds": 15,
                            "periodSeconds": 10,
                            "successThreshold": 1,
                            "timeoutSeconds": 15
                        },
                        "name": "kube-apiserver",
                        "resources": {
                            "requests": {
                                "cpu": "250m"
                            }
                        },
                        "terminationMessagePath": "/dev/termination-log",
                        "terminationMessagePolicy": "File",
                        "volumeMounts": [
                            {
                                "mountPath": "/var/lib/localkube/certs/",
                                "name": "k8s-certs",
                                "readOnly": true
                            },
                            {
                                "mountPath": "/etc/ssl/certs",
                                "name": "ca-certs",
                                "readOnly": true
                            }
                        ]
                    }
                ],
                "dnsPolicy": "ClusterFirst",
                "hostNetwork": true,
                "nodeName": "minikube",
                "restartPolicy": "Always",
                "schedulerName": "default-scheduler",
                "securityContext": {},
                "terminationGracePeriodSeconds": 30,
                "tolerations": [
                    {
                        "effect": "NoExecute",
                        "operator": "Exists"
                    }
                ],
                "volumes": [
                    {
                        "hostPath": {
                            "path": "/var/lib/localkube/certs/",
                            "type": "DirectoryOrCreate"
                        },
                        "name": "k8s-certs"
                    },
                    {
                        "hostPath": {
                            "path": "/etc/ssl/certs",
                            "type": "DirectoryOrCreate"
                        },
                        "name": "ca-certs"
                    }
                ]
            },
            "status": {
                "conditions": [
                    {
                        "lastProbeTime": null,
                        "lastTransitionTime": "2018-10-18T17:49:40Z",
                        "status": "True",
                        "type": "Initialized"
                    },
                    {
                        "lastProbeTime": null,
                        "lastTransitionTime": "2018-10-18T17:49:41Z",
                        "status": "True",
                        "type": "Ready"
                    },
                    {
                        "lastProbeTime": null,
                        "lastTransitionTime": "2018-10-18T17:49:40Z",
                        "status": "True",
                        "type": "PodScheduled"
                    }
                ],
                "containerStatuses": [
                    {
                        "containerID": "docker://a2061474c48152935676dbad02277db2baf798776f7936574ca2fa81260649a1",
                        "image": "k8s.gcr.io/kube-apiserver-amd64:v1.10.0",
                        "imageID": "docker-pullable://k8s.gcr.io/kube-apiserver-amd64@sha256:8b7a675c6fdda0469e971e5b1f3e902bb71c36396faf506f1511052705a5b0ee",
                        "lastState": {},
                        "name": "kube-apiserver",
                        "ready": true,
                        "restartCount": 0,
                        "state": {
                            "running": {
                                "startedAt": "2018-10-18T17:49:41Z"
                            }
                        }
                    }
                ],
                "hostIP": "10.0.2.15",
                "phase": "Running",
                "podIP": "10.0.2.15",
                "qosClass": "Burstable",
                "startTime": "2018-10-18T17:49:40Z"
            }
        },
        {
            "apiVersion": "v1",
            "kind": "Pod",
            "metadata": {
                "annotations": {
                    "kubernetes.io/config.hash": "9408913ca4493e342fe6e42d89f8df7d",
                    "kubernetes.io/config.mirror": "9408913ca4493e342fe6e42d89f8df7d",
                    "kubernetes.io/config.seen": "2018-10-18T17:49:37.304079427Z",
                    "kubernetes.io/config.source": "file",
                    "scheduler.alpha.kubernetes.io/critical-pod": ""
                },
                "creationTimestamp": "2018-10-18T17:49:58Z",
                "labels": {
                    "component": "kube-controller-manager",
                    "tier": "control-plane"
                },
                "name": "kube-controller-manager-minikube",
                "namespace": "kube-system",
                "resourceVersion": "154396",
                "selfLink": "/api/v1/namespaces/kube-system/pods/kube-controller-manager-minikube",
                "uid": "3b1ae597-d2fe-11e8-9699-08002710109d"
            },
            "spec": {
                "containers": [
                    {
                        "command": [
                            "kube-controller-manager",
                            "--address=127.0.0.1",
                            "--kubeconfig=/etc/kubernetes/controller-manager.conf",
                            "--cluster-signing-key-file=/var/lib/localkube/certs/ca.key",
                            "--leader-elect=true",
                            "--use-service-account-credentials=true",
                            "--controllers=*,bootstrapsigner,tokencleaner",
                            "--root-ca-file=/var/lib/localkube/certs/ca.crt",
                            "--service-account-private-key-file=/var/lib/localkube/certs/sa.key",
                            "--cluster-signing-cert-file=/var/lib/localkube/certs/ca.crt"
                        ],
                        "image": "k8s.gcr.io/kube-controller-manager-amd64:v1.10.0",
                        "imagePullPolicy": "IfNotPresent",
                        "livenessProbe": {
                            "failureThreshold": 8,
                            "httpGet": {
                                "host": "127.0.0.1",
                                "path": "/healthz",
                                "port": 10252,
                                "scheme": "HTTP"
                            },
                            "initialDelaySeconds": 15,
                            "periodSeconds": 10,
                            "successThreshold": 1,
                            "timeoutSeconds": 15
                        },
                        "name": "kube-controller-manager",
                        "resources": {
                            "requests": {
                                "cpu": "200m"
                            }
                        },
                        "terminationMessagePath": "/dev/termination-log",
                        "terminationMessagePolicy": "File",
                        "volumeMounts": [
                            {
                                "mountPath": "/var/lib/localkube/certs/",
                                "name": "k8s-certs",
                                "readOnly": true
                            },
                            {
                                "mountPath": "/etc/ssl/certs",
                                "name": "ca-certs",
                                "readOnly": true
                            },
                            {
                                "mountPath": "/etc/kubernetes/controller-manager.conf",
                                "name": "kubeconfig",
                                "readOnly": true
                            }
                        ]
                    }
                ],
                "dnsPolicy": "ClusterFirst",
                "hostNetwork": true,
                "nodeName": "minikube",
                "restartPolicy": "Always",
                "schedulerName": "default-scheduler",
                "securityContext": {},
                "terminationGracePeriodSeconds": 30,
                "tolerations": [
                    {
                        "effect": "NoExecute",
                        "operator": "Exists"
                    }
                ],
                "volumes": [
                    {
                        "hostPath": {
                            "path": "/var/lib/localkube/certs/",
                            "type": "DirectoryOrCreate"
                        },
                        "name": "k8s-certs"
                    },
                    {
                        "hostPath": {
                            "path": "/etc/ssl/certs",
                            "type": "DirectoryOrCreate"
                        },
                        "name": "ca-certs"
                    },
                    {
                        "hostPath": {
                            "path": "/etc/kubernetes/controller-manager.conf",
                            "type": "FileOrCreate"
                        },
                        "name": "kubeconfig"
                    }
                ]
            },
            "status": {
                "conditions": [
                    {
                        "lastProbeTime": null,
                        "lastTransitionTime": "2018-10-18T17:49:40Z",
                        "status": "True",
                        "type": "Initialized"
                    },
                    {
                        "lastProbeTime": null,
                        "lastTransitionTime": "2018-10-18T17:49:41Z",
                        "status": "True",
                        "type": "Ready"
                    },
                    {
                        "lastProbeTime": null,
                        "lastTransitionTime": "2018-10-18T17:49:40Z",
                        "status": "True",
                        "type": "PodScheduled"
                    }
                ],
                "containerStatuses": [
                    {
                        "containerID": "docker://914636549cce8159700afef3d4f99be1bdf25e08364b50810148c06226f791fb",
                        "image": "k8s.gcr.io/kube-controller-manager-amd64:v1.10.0",
                        "imageID": "docker-pullable://k8s.gcr.io/kube-controller-manager-amd64@sha256:ab637b1f4700e0cc83d3ae3c5368919eb8f6199485adcc126fd306481df56fec",
                        "lastState": {},
                        "name": "kube-controller-manager",
                        "ready": true,
                        "restartCount": 0,
                        "state": {
                            "running": {
                                "startedAt": "2018-10-18T17:49:41Z"
                            }
                        }
                    }
                ],
                "hostIP": "10.0.2.15",
                "phase": "Running",
                "podIP": "10.0.2.15",
                "qosClass": "Burstable",
                "startTime": "2018-10-18T17:49:40Z"
            }
        },
        {
            "apiVersion": "v1",
            "kind": "Pod",
            "metadata": {
                "creationTimestamp": "2018-10-04T18:54:06Z",
                "generateName": "kube-dns-86f4d74b45-",
                "labels": {
                    "k8s-app": "kube-dns",
                    "pod-template-hash": "4290830601"
                },
                "name": "kube-dns-86f4d74b45-l4kjb",
                "namespace": "kube-system",
                "ownerReferences": [
                    {
                        "apiVersion": "extensions/v1beta1",
                        "blockOwnerDeletion": true,
                        "controller": true,
                        "kind": "ReplicaSet",
                        "name": "kube-dns-86f4d74b45",
                        "uid": "debe5b75-c806-11e8-8ef3-08002710109d"
                    }
                ],
                "resourceVersion": "154736",
                "selfLink": "/api/v1/namespaces/kube-system/pods/kube-dns-86f4d74b45-l4kjb",
                "uid": "dec107e9-c806-11e8-8ef3-08002710109d"
            },
            "spec": {
                "affinity": {
                    "nodeAffinity": {
                        "requiredDuringSchedulingIgnoredDuringExecution": {
                            "nodeSelectorTerms": [
                                {
                                    "matchExpressions": [
                                        {
                                            "key": "beta.kubernetes.io/arch",
                                            "operator": "In",
                                            "values": [
                                                "amd64"
                                            ]
                                        }
                                    ]
                                }
                            ]
                        }
                    }
                },
                "containers": [
                    {
                        "args": [
                            "--domain=cluster.local.",
                            "--dns-port=10053",
                            "--config-dir=/kube-dns-config",
                            "--v=2"
                        ],
                        "env": [
                            {
                                "name": "PROMETHEUS_PORT",
                                "value": "10055"
                            }
                        ],
                        "image": "k8s.gcr.io/k8s-dns-kube-dns-amd64:1.14.8",
                        "imagePullPolicy": "IfNotPresent",
                        "livenessProbe": {
                            "failureThreshold": 5,
                            "httpGet": {
                                "path": "/healthcheck/kubedns",
                                "port": 10054,
                                "scheme": "HTTP"
                            },
                            "initialDelaySeconds": 60,
                            "periodSeconds": 10,
                            "successThreshold": 1,
                            "timeoutSeconds": 5
                        },
                        "name": "kubedns",
                        "ports": [
                            {
                                "containerPort": 10053,
                                "name": "dns-local",
                                "protocol": "UDP"
                            },
                            {
                                "containerPort": 10053,
                                "name": "dns-tcp-local",
                                "protocol": "TCP"
                            },
                            {
                                "containerPort": 10055,
                                "name": "metrics",
                                "protocol": "TCP"
                            }
                        ],
                        "readinessProbe": {
                            "failureThreshold": 3,
                            "httpGet": {
                                "path": "/readiness",
                                "port": 8081,
                                "scheme": "HTTP"
                            },
                            "initialDelaySeconds": 3,
                            "periodSeconds": 10,
                            "successThreshold": 1,
                            "timeoutSeconds": 5
                        },
                        "resources": {
                            "limits": {
                                "memory": "170Mi"
                            },
                            "requests": {
                                "cpu": "100m",
                                "memory": "70Mi"
                            }
                        },
                        "terminationMessagePath": "/dev/termination-log",
                        "terminationMessagePolicy": "File",
                        "volumeMounts": [
                            {
                                "mountPath": "/kube-dns-config",
                                "name": "kube-dns-config"
                            },
                            {
                                "mountPath": "/var/run/secrets/kubernetes.io/serviceaccount",
                                "name": "kube-dns-token-f54cf",
                                "readOnly": true
                            }
                        ]
                    },
                    {
                        "args": [
                            "-v=2",
                            "-logtostderr",
                            "-configDir=/etc/k8s/dns/dnsmasq-nanny",
                            "-restartDnsmasq=true",
                            "--",
                            "-k",
                            "--cache-size=1000",
                            "--no-negcache",
                            "--log-facility=-",
                            "--server=/cluster.local/127.0.0.1#10053",
                            "--server=/in-addr.arpa/127.0.0.1#10053",
                            "--server=/ip6.arpa/127.0.0.1#10053"
                        ],
                        "image": "k8s.gcr.io/k8s-dns-dnsmasq-nanny-amd64:1.14.8",
                        "imagePullPolicy": "IfNotPresent",
                        "livenessProbe": {
                            "failureThreshold": 5,
                            "httpGet": {
                                "path": "/healthcheck/dnsmasq",
                                "port": 10054,
                                "scheme": "HTTP"
                            },
                            "initialDelaySeconds": 60,
                            "periodSeconds": 10,
                            "successThreshold": 1,
                            "timeoutSeconds": 5
                        },
                        "name": "dnsmasq",
                        "ports": [
                            {
                                "containerPort": 53,
                                "name": "dns",
                                "protocol": "UDP"
                            },
                            {
                                "containerPort": 53,
                                "name": "dns-tcp",
                                "protocol": "TCP"
                            }
                        ],
                        "resources": {
                            "requests": {
                                "cpu": "150m",
                                "memory": "20Mi"
                            }
                        },
                        "terminationMessagePath": "/dev/termination-log",
                        "terminationMessagePolicy": "File",
                        "volumeMounts": [
                            {
                                "mountPath": "/etc/k8s/dns/dnsmasq-nanny",
                                "name": "kube-dns-config"
                            },
                            {
                                "mountPath": "/var/run/secrets/kubernetes.io/serviceaccount",
                                "name": "kube-dns-token-f54cf",
                                "readOnly": true
                            }
                        ]
                    },
                    {
                        "args": [
                            "--v=2",
                            "--logtostderr",
                            "--probe=kubedns,127.0.0.1:10053,kubernetes.default.svc.cluster.local,5,SRV",
                            "--probe=dnsmasq,127.0.0.1:53,kubernetes.default.svc.cluster.local,5,SRV"
                        ],
                        "image": "k8s.gcr.io/k8s-dns-sidecar-amd64:1.14.8",
                        "imagePullPolicy": "IfNotPresent",
                        "livenessProbe": {
                            "failureThreshold": 5,
                            "httpGet": {
                                "path": "/metrics",
                                "port": 10054,
                                "scheme": "HTTP"
                            },
                            "initialDelaySeconds": 60,
                            "periodSeconds": 10,
                            "successThreshold": 1,
                            "timeoutSeconds": 5
                        },
                        "name": "sidecar",
                        "ports": [
                            {
                                "containerPort": 10054,
                                "name": "metrics",
                                "protocol": "TCP"
                            }
                        ],
                        "resources": {
                            "requests": {
                                "cpu": "10m",
                                "memory": "20Mi"
                            }
                        },
                        "terminationMessagePath": "/dev/termination-log",
                        "terminationMessagePolicy": "File",
                        "volumeMounts": [
                            {
                                "mountPath": "/var/run/secrets/kubernetes.io/serviceaccount",
                                "name": "kube-dns-token-f54cf",
                                "readOnly": true
                            }
                        ]
                    }
                ],
                "dnsPolicy": "Default",
                "nodeName": "minikube",
                "restartPolicy": "Always",
                "schedulerName": "default-scheduler",
                "securityContext": {},
                "serviceAccount": "kube-dns",
                "serviceAccountName": "kube-dns",
                "terminationGracePeriodSeconds": 30,
                "tolerations": [
                    {
                        "key": "CriticalAddonsOnly",
                        "operator": "Exists"
                    },
                    {
                        "effect": "NoSchedule",
                        "key": "node-role.kubernetes.io/master"
                    },
                    {
                        "effect": "NoExecute",
                        "key": "node.kubernetes.io/not-ready",
                        "operator": "Exists",
                        "tolerationSeconds": 300
                    },
                    {
                        "effect": "NoExecute",
                        "key": "node.kubernetes.io/unreachable",
                        "operator": "Exists",
                        "tolerationSeconds": 300
                    }
                ],
                "volumes": [
                    {
                        "configMap": {
                            "defaultMode": 420,
                            "name": "kube-dns",
                            "optional": true
                        },
                        "name": "kube-dns-config"
                    },
                    {
                        "name": "kube-dns-token-f54cf",
                        "secret": {
                            "defaultMode": 420,
                            "secretName": "kube-dns-token-f54cf"
                        }
                    }
                ]
            },
            "status": {
                "conditions": [
                    {
                        "lastProbeTime": null,
                        "lastTransitionTime": "2018-10-04T18:54:06Z",
                        "status": "True",
                        "type": "Initialized"
                    },
                    {
                        "lastProbeTime": null,
                        "lastTransitionTime": "2018-10-18T17:51:23Z",
                        "status": "True",
                        "type": "Ready"
                    },
                    {
                        "lastProbeTime": null,
                        "lastTransitionTime": "2018-10-04T18:54:06Z",
                        "status": "True",
                        "type": "PodScheduled"
                    }
                ],
                "containerStatuses": [
                    {
                        "containerID": "docker://0a72b6f1362e24ec8cc0679df6b5e631896d603bbb7c9f57a28e1e0f13917515",
                        "image": "k8s.gcr.io/k8s-dns-dnsmasq-nanny-amd64:1.14.8",
                        "imageID": "docker-pullable://k8s.gcr.io/k8s-dns-dnsmasq-nanny-amd64@sha256:93c827f018cf3322f1ff2aa80324a0306048b0a69bc274e423071fb0d2d29d8b",
                        "lastState": {
                            "terminated": {
                                "containerID": "docker://b19d15ac8bf967f210a983bd3d66c73264170a67472200f5c19825130404d6b5",
                                "exitCode": 255,
                                "finishedAt": "2018-10-18T17:49:18Z",
                                "reason": "Error",
                                "startedAt": "2018-10-11T06:07:21Z"
                            }
                        },
                        "name": "dnsmasq",
                        "ready": true,
                        "restartCount": 3,
                        "state": {
                            "running": {
                                "startedAt": "2018-10-18T17:49:56Z"
                            }
                        }
                    },
                    {
                        "containerID": "docker://c943e3dfb233b146fb69a7981e6a53fbbb0bd52bfdded63fd50083daf219344e",
                        "image": "k8s.gcr.io/k8s-dns-kube-dns-amd64:1.14.8",
                        "imageID": "docker-pullable://k8s.gcr.io/k8s-dns-kube-dns-amd64@sha256:6d8e0da4fb46e9ea2034a3f4cab0e095618a2ead78720c12e791342738e5f85d",
                        "lastState": {
                            "terminated": {
                                "containerID": "docker://ca0289da4e633babbb96b226ee393c33b47c17cc19a224941745a07a32251c5b",
                                "exitCode": 255,
                                "finishedAt": "2018-10-18T17:50:55Z",
                                "reason": "Error",
                                "startedAt": "2018-10-18T17:49:55Z"
                            }
                        },
                        "name": "kubedns",
                        "ready": true,
                        "restartCount": 5,
                        "state": {
                            "running": {
                                "startedAt": "2018-10-18T17:51:11Z"
                            }
                        }
                    },
                    {
                        "containerID": "docker://0bdc24bd620713d287e37e751b15f62acb92a9dd3c8c29ac602f49fbcc7f1afe",
                        "image": "k8s.gcr.io/k8s-dns-sidecar-amd64:1.14.8",
                        "imageID": "docker-pullable://k8s.gcr.io/k8s-dns-sidecar-amd64@sha256:23df717980b4aa08d2da6c4cfa327f1b730d92ec9cf740959d2d5911830d82fb",
                        "lastState": {
                            "terminated": {
                                "containerID": "docker://c8d5852fb6e1768599808da97cbac687eaecf81ecf54b97715b7686920e1b580",
                                "exitCode": 255,
                                "finishedAt": "2018-10-18T17:49:18Z",
                                "reason": "Error",
                                "startedAt": "2018-10-11T06:07:21Z"
                            }
                        },
                        "name": "sidecar",
                        "ready": true,
                        "restartCount": 3,
                        "state": {
                            "running": {
                                "startedAt": "2018-10-18T17:49:57Z"
                            }
                        }
                    }
                ],
                "hostIP": "10.0.2.15",
                "phase": "Running",
                "podIP": "172.17.0.2",
                "qosClass": "Burstable",
                "startTime": "2018-10-04T18:54:06Z"
            }
        },
        {
            "apiVersion": "v1",
            "kind": "Pod",
            "metadata": {
                "creationTimestamp": "2018-10-18T17:50:47Z",
                "generateName": "kube-proxy-",
                "labels": {
                    "controller-revision-hash": "1193416634",
                    "k8s-app": "kube-proxy",
                    "pod-template-generation": "1"
                },
                "name": "kube-proxy-5snj5",
                "namespace": "kube-system",
                "ownerReferences": [
                    {
                        "apiVersion": "apps/v1",
                        "blockOwnerDeletion": true,
                        "controller": true,
                        "kind": "DaemonSet",
                        "name": "kube-proxy",
                        "uid": "daf5b34f-c806-11e8-8ef3-08002710109d"
                    }
                ],
                "resourceVersion": "154627",
                "selfLink": "/api/v1/namespaces/kube-system/pods/kube-proxy-5snj5",
                "uid": "57ea5b37-d2fe-11e8-9699-08002710109d"
            },
            "spec": {
                "containers": [
                    {
                        "command": [
                            "/usr/local/bin/kube-proxy",
                            "--config=/var/lib/kube-proxy/config.conf"
                        ],
                        "image": "k8s.gcr.io/kube-proxy-amd64:v1.10.0",
                        "imagePullPolicy": "IfNotPresent",
                        "name": "kube-proxy",
                        "resources": {},
                        "securityContext": {
                            "privileged": true
                        },
                        "terminationMessagePath": "/dev/termination-log",
                        "terminationMessagePolicy": "File",
                        "volumeMounts": [
                            {
                                "mountPath": "/var/lib/kube-proxy",
                                "name": "kube-proxy"
                            },
                            {
                                "mountPath": "/run/xtables.lock",
                                "name": "xtables-lock"
                            },
                            {
                                "mountPath": "/lib/modules",
                                "name": "lib-modules",
                                "readOnly": true
                            },
                            {
                                "mountPath": "/var/run/secrets/kubernetes.io/serviceaccount",
                                "name": "kube-proxy-token-vs5w6",
                                "readOnly": true
                            }
                        ]
                    }
                ],
                "dnsPolicy": "ClusterFirst",
                "hostNetwork": true,
                "nodeName": "minikube",
                "restartPolicy": "Always",
                "schedulerName": "default-scheduler",
                "securityContext": {},
                "serviceAccount": "kube-proxy",
                "serviceAccountName": "kube-proxy",
                "terminationGracePeriodSeconds": 30,
                "tolerations": [
                    {
                        "effect": "NoSchedule",
                        "key": "node-role.kubernetes.io/master"
                    },
                    {
                        "effect": "NoSchedule",
                        "key": "node.cloudprovider.kubernetes.io/uninitialized",
                        "value": "true"
                    },
                    {
                        "effect": "NoExecute",
                        "key": "node.kubernetes.io/not-ready",
                        "operator": "Exists"
                    },
                    {
                        "effect": "NoExecute",
                        "key": "node.kubernetes.io/unreachable",
                        "operator": "Exists"
                    },
                    {
                        "effect": "NoSchedule",
                        "key": "node.kubernetes.io/disk-pressure",
                        "operator": "Exists"
                    },
                    {
                        "effect": "NoSchedule",
                        "key": "node.kubernetes.io/memory-pressure",
                        "operator": "Exists"
                    }
                ],
                "volumes": [
                    {
                        "configMap": {
                            "defaultMode": 420,
                            "name": "kube-proxy"
                        },
                        "name": "kube-proxy"
                    },
                    {
                        "hostPath": {
                            "path": "/run/xtables.lock",
                            "type": "FileOrCreate"
                        },
                        "name": "xtables-lock"
                    },
                    {
                        "hostPath": {
                            "path": "/lib/modules",
                            "type": ""
                        },
                        "name": "lib-modules"
                    },
                    {
                        "name": "kube-proxy-token-vs5w6",
                        "secret": {
                            "defaultMode": 420,
                            "secretName": "kube-proxy-token-vs5w6"
                        }
                    }
                ]
            },
            "status": {
                "conditions": [
                    {
                        "lastProbeTime": null,
                        "lastTransitionTime": "2018-10-18T17:50:47Z",
                        "status": "True",
                        "type": "Initialized"
                    },
                    {
                        "lastProbeTime": null,
                        "lastTransitionTime": "2018-10-18T17:50:49Z",
                        "status": "True",
                        "type": "Ready"
                    },
                    {
                        "lastProbeTime": null,
                        "lastTransitionTime": "2018-10-18T17:50:47Z",
                        "status": "True",
                        "type": "PodScheduled"
                    }
                ],
                "containerStatuses": [
                    {
                        "containerID": "docker://eb419cec7d72030f2e0da07ffbd5975409919fd5bab182b30c6592dbe3dec31e",
                        "image": "k8s.gcr.io/kube-proxy-amd64:v1.10.0",
                        "imageID": "docker-pullable://k8s.gcr.io/kube-proxy-amd64@sha256:fc944b06c14cb442916045a630d5e374dfb9c453dfc56d3cb59ac21ea4268875",
                        "lastState": {},
                        "name": "kube-proxy",
                        "ready": true,
                        "restartCount": 0,
                        "state": {
                            "running": {
                                "startedAt": "2018-10-18T17:50:47Z"
                            }
                        }
                    }
                ],
                "hostIP": "10.0.2.15",
                "phase": "Running",
                "podIP": "10.0.2.15",
                "qosClass": "BestEffort",
                "startTime": "2018-10-18T17:50:47Z"
            }
        },
        {
            "apiVersion": "v1",
            "kind": "Pod",
            "metadata": {
                "annotations": {
                    "kubernetes.io/config.hash": "31cf0ccbee286239d451edb6fb511513",
                    "kubernetes.io/config.mirror": "31cf0ccbee286239d451edb6fb511513",
                    "kubernetes.io/config.seen": "2018-10-11T06:07:05.683835781Z",
                    "kubernetes.io/config.source": "file",
                    "scheduler.alpha.kubernetes.io/critical-pod": ""
                },
                "creationTimestamp": "2018-10-11T06:07:21Z",
                "labels": {
                    "component": "kube-scheduler",
                    "tier": "control-plane"
                },
                "name": "kube-scheduler-minikube",
                "namespace": "kube-system",
                "resourceVersion": "154340",
                "selfLink": "/api/v1/namespaces/kube-system/pods/kube-scheduler-minikube",
                "uid": "ea9f56cc-cd1b-11e8-8aef-08002710109d"
            },
            "spec": {
                "containers": [
                    {
                        "command": [
                            "kube-scheduler",
                            "--address=127.0.0.1",
                            "--leader-elect=true",
                            "--kubeconfig=/etc/kubernetes/scheduler.conf"
                        ],
                        "image": "k8s.gcr.io/kube-scheduler-amd64:v1.10.0",
                        "imagePullPolicy": "IfNotPresent",
                        "livenessProbe": {
                            "failureThreshold": 8,
                            "httpGet": {
                                "host": "127.0.0.1",
                                "path": "/healthz",
                                "port": 10251,
                                "scheme": "HTTP"
                            },
                            "initialDelaySeconds": 15,
                            "periodSeconds": 10,
                            "successThreshold": 1,
                            "timeoutSeconds": 15
                        },
                        "name": "kube-scheduler",
                        "resources": {
                            "requests": {
                                "cpu": "100m"
                            }
                        },
                        "terminationMessagePath": "/dev/termination-log",
                        "terminationMessagePolicy": "File",
                        "volumeMounts": [
                            {
                                "mountPath": "/etc/kubernetes/scheduler.conf",
                                "name": "kubeconfig",
                                "readOnly": true
                            }
                        ]
                    }
                ],
                "dnsPolicy": "ClusterFirst",
                "hostNetwork": true,
                "nodeName": "minikube",
                "restartPolicy": "Always",
                "schedulerName": "default-scheduler",
                "securityContext": {},
                "terminationGracePeriodSeconds": 30,
                "tolerations": [
                    {
                        "effect": "NoExecute",
                        "operator": "Exists"
                    }
                ],
                "volumes": [
                    {
                        "hostPath": {
                            "path": "/etc/kubernetes/scheduler.conf",
                            "type": "FileOrCreate"
                        },
                        "name": "kubeconfig"
                    }
                ]
            },
            "status": {
                "conditions": [
                    {
                        "lastProbeTime": null,
                        "lastTransitionTime": "2018-10-18T17:49:40Z",
                        "status": "True",
                        "type": "Initialized"
                    },
                    {
                        "lastProbeTime": null,
                        "lastTransitionTime": "2018-10-18T17:49:41Z",
                        "status": "True",
                        "type": "Ready"
                    },
                    {
                        "lastProbeTime": null,
                        "lastTransitionTime": "2018-10-18T17:49:40Z",
                        "status": "True",
                        "type": "PodScheduled"
                    }
                ],
                "containerStatuses": [
                    {
                        "containerID": "docker://1017184e0ac70ee41fd055b1af45d95de73ca0cf81d20350693949debb492628",
                        "image": "k8s.gcr.io/kube-scheduler-amd64:v1.10.0",
                        "imageID": "docker-pullable://k8s.gcr.io/kube-scheduler-amd64@sha256:4670717a1c092680dc0ac018dc36f991e06ffbee6b6bafba9a2968d7bebe7800",
                        "lastState": {
                            "terminated": {
                                "containerID": "docker://b1912d8b32478f0691660f8df5cf1067ae8bf162c08f97fc2c5ca449c2e6cb13",
                                "exitCode": 255,
                                "finishedAt": "2018-10-18T17:49:18Z",
                                "reason": "Error",
                                "startedAt": "2018-10-11T06:07:10Z"
                            }
                        },
                        "name": "kube-scheduler",
                        "ready": true,
                        "restartCount": 1,
                        "state": {
                            "running": {
                                "startedAt": "2018-10-18T17:49:41Z"
                            }
                        }
                    }
                ],
                "hostIP": "10.0.2.15",
                "phase": "Running",
                "podIP": "10.0.2.15",
                "qosClass": "Burstable",
                "startTime": "2018-10-18T17:49:40Z"
            }
        },
        {
            "apiVersion": "v1",
            "kind": "Pod",
            "metadata": {
                "creationTimestamp": "2018-10-04T18:54:08Z",
                "generateName": "kubernetes-dashboard-5498ccf677-",
                "labels": {
                    "addonmanager.kubernetes.io/mode": "Reconcile",
                    "app": "kubernetes-dashboard",
                    "pod-template-hash": "1054779233",
                    "version": "v1.8.1"
                },
                "name": "kubernetes-dashboard-5498ccf677-tzhpb",
                "namespace": "kube-system",
                "ownerReferences": [
                    {
                        "apiVersion": "extensions/v1beta1",
                        "blockOwnerDeletion": true,
                        "controller": true,
                        "kind": "ReplicaSet",
                        "name": "kubernetes-dashboard-5498ccf677",
                        "uid": "df8423d2-c806-11e8-8ef3-08002710109d"
                    }
                ],
                "resourceVersion": "154759",
                "selfLink": "/api/v1/namespaces/kube-system/pods/kubernetes-dashboard-5498ccf677-tzhpb",
                "uid": "df84d9b0-c806-11e8-8ef3-08002710109d"
            },
            "spec": {
                "containers": [
                    {
                        "image": "k8s.gcr.io/kubernetes-dashboard-amd64:v1.8.1",
                        "imagePullPolicy": "IfNotPresent",
                        "livenessProbe": {
                            "failureThreshold": 3,
                            "httpGet": {
                                "path": "/",
                                "port": 9090,
                                "scheme": "HTTP"
                            },
                            "initialDelaySeconds": 30,
                            "periodSeconds": 10,
                            "successThreshold": 1,
                            "timeoutSeconds": 30
                        },
                        "name": "kubernetes-dashboard",
                        "ports": [
                            {
                                "containerPort": 9090,
                                "protocol": "TCP"
                            }
                        ],
                        "resources": {},
                        "terminationMessagePath": "/dev/termination-log",
                        "terminationMessagePolicy": "File",
                        "volumeMounts": [
                            {
                                "mountPath": "/var/run/secrets/kubernetes.io/serviceaccount",
                                "name": "default-token-gjrqf",
                                "readOnly": true
                            }
                        ]
                    }
                ],
                "dnsPolicy": "ClusterFirst",
                "nodeName": "minikube",
                "restartPolicy": "Always",
                "schedulerName": "default-scheduler",
                "securityContext": {},
                "serviceAccount": "default",
                "serviceAccountName": "default",
                "terminationGracePeriodSeconds": 30,
                "tolerations": [
                    {
                        "effect": "NoExecute",
                        "key": "node.kubernetes.io/not-ready",
                        "operator": "Exists",
                        "tolerationSeconds": 300
                    },
                    {
                        "effect": "NoExecute",
                        "key": "node.kubernetes.io/unreachable",
                        "operator": "Exists",
                        "tolerationSeconds": 300
                    }
                ],
                "volumes": [
                    {
                        "name": "default-token-gjrqf",
                        "secret": {
                            "defaultMode": 420,
                            "secretName": "default-token-gjrqf"
                        }
                    }
                ]
            },
            "status": {
                "conditions": [
                    {
                        "lastProbeTime": null,
                        "lastTransitionTime": "2018-10-04T18:54:08Z",
                        "status": "True",
                        "type": "Initialized"
                    },
                    {
                        "lastProbeTime": null,
                        "lastTransitionTime": "2018-10-18T17:51:29Z",
                        "status": "True",
                        "type": "Ready"
                    },
                    {
                        "lastProbeTime": null,
                        "lastTransitionTime": "2018-10-04T18:54:08Z",
                        "status": "True",
                        "type": "PodScheduled"
                    }
                ],
                "containerStatuses": [
                    {
                        "containerID": "docker://b28fba798bb2406880dc854a377f932bd16aa43e30749db31830c27854a4926f",
                        "image": "k8s.gcr.io/kubernetes-dashboard-amd64:v1.8.1",
                        "imageID": "docker-pullable://k8s.gcr.io/kubernetes-dashboard-amd64@sha256:3861695e962972965a4c611bcabc2032f885d8cbdb0bccc9bf513ef16335fe33",
                        "lastState": {
                            "terminated": {
                                "containerID": "docker://3d6897dea1122db8235b7f0e4449a41e4bb4e26f94198f2f6e7e131db9216684",
                                "exitCode": 1,
                                "finishedAt": "2018-10-18T17:51:07Z",
                                "reason": "Error",
                                "startedAt": "2018-10-18T17:50:41Z"
                            }
                        },
                        "name": "kubernetes-dashboard",
                        "ready": true,
                        "restartCount": 11,
                        "state": {
                            "running": {
                                "startedAt": "2018-10-18T17:51:28Z"
                            }
                        }
                    }
                ],
                "hostIP": "10.0.2.15",
                "phase": "Running",
                "podIP": "172.17.0.3",
                "qosClass": "BestEffort",
                "startTime": "2018-10-04T18:54:08Z"
            }
        },
        {
            "apiVersion": "v1",
            "kind": "Pod",
            "metadata": {
                "creationTimestamp": "2018-10-09T14:31:47Z",
                "generateName": "nginx-ingress-controller-5984b97644-",
                "labels": {
                    "addonmanager.kubernetes.io/mode": "Reconcile",
                    "app": "nginx-ingress-controller",
                    "name": "nginx-ingress-controller",
                    "pod-template-hash": "1540653200"
                },
                "name": "nginx-ingress-controller-5984b97644-9xd2c",
                "namespace": "kube-system",
                "ownerReferences": [
                    {
                        "apiVersion": "extensions/v1beta1",
                        "blockOwnerDeletion": true,
                        "controller": true,
                        "kind": "ReplicaSet",
                        "name": "nginx-ingress-controller-5984b97644",
                        "uid": "0db13171-cbd0-11e8-bfda-08002710109d"
                    }
                ],
                "resourceVersion": "154682",
                "selfLink": "/api/v1/namespaces/kube-system/pods/nginx-ingress-controller-5984b97644-9xd2c",
                "uid": "0db62586-cbd0-11e8-bfda-08002710109d"
            },
            "spec": {
                "containers": [
                    {
                        "args": [
                            "/nginx-ingress-controller",
                            "--default-backend-service=$(POD_NAMESPACE)/default-http-backend",
                            "--configmap=$(POD_NAMESPACE)/nginx-load-balancer-conf",
                            "--tcp-services-configmap=$(POD_NAMESPACE)/tcp-services",
                            "--udp-services-configmap=$(POD_NAMESPACE)/udp-services",
                            "--report-node-internal-ip-address"
                        ],
                        "env": [
                            {
                                "name": "POD_NAME",
                                "valueFrom": {
                                    "fieldRef": {
                                        "apiVersion": "v1",
                                        "fieldPath": "metadata.name"
                                    }
                                }
                            },
                            {
                                "name": "POD_NAMESPACE",
                                "valueFrom": {
                                    "fieldRef": {
                                        "apiVersion": "v1",
                                        "fieldPath": "metadata.namespace"
                                    }
                                }
                            }
                        ],
                        "image": "quay.io/kubernetes-ingress-controller/nginx-ingress-controller:0.16.2",
                        "imagePullPolicy": "IfNotPresent",
                        "livenessProbe": {
                            "failureThreshold": 3,
                            "httpGet": {
                                "path": "/healthz",
                                "port": 10254,
                                "scheme": "HTTP"
                            },
                            "initialDelaySeconds": 10,
                            "periodSeconds": 10,
                            "successThreshold": 1,
                            "timeoutSeconds": 1
                        },
                        "name": "nginx-ingress-controller",
                        "ports": [
                            {
                                "containerPort": 80,
                                "hostPort": 80,
                                "protocol": "TCP"
                            },
                            {
                                "containerPort": 443,
                                "hostPort": 443,
                                "protocol": "TCP"
                            },
                            {
                                "containerPort": 18080,
                                "hostPort": 18080,
                                "protocol": "TCP"
                            }
                        ],
                        "readinessProbe": {
                            "failureThreshold": 3,
                            "httpGet": {
                                "path": "/healthz",
                                "port": 10254,
                                "scheme": "HTTP"
                            },
                            "periodSeconds": 10,
                            "successThreshold": 1,
                            "timeoutSeconds": 1
                        },
                        "resources": {},
                        "securityContext": {
                            "capabilities": {
                                "add": [
                                    "NET_BIND_SERVICE"
                                ],
                                "drop": [
                                    "ALL"
                                ]
                            },
                            "runAsUser": 33
                        },
                        "terminationMessagePath": "/dev/termination-log",
                        "terminationMessagePolicy": "File",
                        "volumeMounts": [
                            {
                                "mountPath": "/var/run/secrets/kubernetes.io/serviceaccount",
                                "name": "default-token-gjrqf",
                                "readOnly": true
                            }
                        ]
                    }
                ],
                "dnsPolicy": "ClusterFirst",
                "nodeName": "minikube",
                "restartPolicy": "Always",
                "schedulerName": "default-scheduler",
                "securityContext": {},
                "serviceAccount": "default",
                "serviceAccountName": "default",
                "terminationGracePeriodSeconds": 60,
                "tolerations": [
                    {
                        "effect": "NoExecute",
                        "key": "node.kubernetes.io/not-ready",
                        "operator": "Exists",
                        "tolerationSeconds": 300
                    },
                    {
                        "effect": "NoExecute",
                        "key": "node.kubernetes.io/unreachable",
                        "operator": "Exists",
                        "tolerationSeconds": 300
                    }
                ],
                "volumes": [
                    {
                        "name": "default-token-gjrqf",
                        "secret": {
                            "defaultMode": 420,
                            "secretName": "default-token-gjrqf"
                        }
                    }
                ]
            },
            "status": {
                "conditions": [
                    {
                        "lastProbeTime": null,
                        "lastTransitionTime": "2018-10-09T14:31:47Z",
                        "status": "True",
                        "type": "Initialized"
                    },
                    {
                        "lastProbeTime": null,
                        "lastTransitionTime": "2018-10-18T17:51:04Z",
                        "status": "True",
                        "type": "Ready"
                    },
                    {
                        "lastProbeTime": null,
                        "lastTransitionTime": "2018-10-09T14:31:47Z",
                        "status": "True",
                        "type": "PodScheduled"
                    }
                ],
                "containerStatuses": [
                    {
                        "containerID": "docker://ae9791104869ed938bba1f7d155e98db94894d3902b4a49aeba7c4ac816fa6d6",
                        "image": "quay.io/kubernetes-ingress-controller/nginx-ingress-controller:0.16.2",
                        "imageID": "docker-pullable://quay.io/kubernetes-ingress-controller/nginx-ingress-controller@sha256:84ed5290a91c53b4c224a724a251347dfc8cf2bca4be06e32f642c396eb02429",
                        "lastState": {
                            "terminated": {
                                "containerID": "docker://c91fc683c63e7fc3083128ffa4e1d975b7d508f50136fac7dc7ccdb0e74b375c",
                                "exitCode": 143,
                                "finishedAt": "2018-10-18T17:50:57Z",
                                "reason": "Error",
                                "startedAt": "2018-10-18T17:50:27Z"
                            }
                        },
                        "name": "nginx-ingress-controller",
                        "ready": true,
                        "restartCount": 6,
                        "state": {
                            "running": {
                                "startedAt": "2018-10-18T17:50:57Z"
                            }
                        }
                    }
                ],
                "hostIP": "10.0.2.15",
                "phase": "Running",
                "podIP": "172.17.0.6",
                "qosClass": "BestEffort",
                "startTime": "2018-10-09T14:31:47Z"
            }
        },
        {
            "apiVersion": "v1",
            "kind": "Pod",
            "metadata": {
                "annotations": {
                    "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"v1\",\"kind\":\"Pod\",\"metadata\":{\"annotations\":{},\"labels\":{\"addonmanager.kubernetes.io/mode\":\"Reconcile\",\"integration-test\":\"storage-provisioner\"},\"name\":\"storage-provisioner\",\"namespace\":\"kube-system\"},\"spec\":{\"containers\":[{\"command\":[\"/storage-provisioner\"],\"image\":\"gcr.io/k8s-minikube/storage-provisioner:v1.8.1\",\"imagePullPolicy\":\"IfNotPresent\",\"name\":\"storage [...]
                },
                "creationTimestamp": "2018-10-04T18:54:08Z",
                "labels": {
                    "addonmanager.kubernetes.io/mode": "Reconcile",
                    "integration-test": "storage-provisioner"
                },
                "name": "storage-provisioner",
                "namespace": "kube-system",
                "resourceVersion": "154774",
                "selfLink": "/api/v1/namespaces/kube-system/pods/storage-provisioner",
                "uid": "df9441af-c806-11e8-8ef3-08002710109d"
            },
            "spec": {
                "containers": [
                    {
                        "command": [
                            "/storage-provisioner"
                        ],
                        "image": "gcr.io/k8s-minikube/storage-provisioner:v1.8.1",
                        "imagePullPolicy": "IfNotPresent",
                        "name": "storage-provisioner",
                        "resources": {},
                        "terminationMessagePath": "/dev/termination-log",
                        "terminationMessagePolicy": "File",
                        "volumeMounts": [
                            {
                                "mountPath": "/tmp",
                                "name": "tmp"
                            },
                            {
                                "mountPath": "/var/run/secrets/kubernetes.io/serviceaccount",
                                "name": "storage-provisioner-token-x8str",
                                "readOnly": true
                            }
                        ]
                    }
                ],
                "dnsPolicy": "ClusterFirst",
                "hostNetwork": true,
                "nodeName": "minikube",
                "restartPolicy": "Always",
                "schedulerName": "default-scheduler",
                "securityContext": {},
                "serviceAccount": "storage-provisioner",
                "serviceAccountName": "storage-provisioner",
                "terminationGracePeriodSeconds": 30,
                "tolerations": [
                    {
                        "effect": "NoExecute",
                        "key": "node.kubernetes.io/not-ready",
                        "operator": "Exists",
                        "tolerationSeconds": 300
                    },
                    {
                        "effect": "NoExecute",
                        "key": "node.kubernetes.io/unreachable",
                        "operator": "Exists",
                        "tolerationSeconds": 300
                    }
                ],
                "volumes": [
                    {
                        "hostPath": {
                            "path": "/tmp",
                            "type": "Directory"
                        },
                        "name": "tmp"
                    },
                    {
                        "name": "storage-provisioner-token-x8str",
                        "secret": {
                            "defaultMode": 420,
                            "secretName": "storage-provisioner-token-x8str"
                        }
                    }
                ]
            },
            "status": {
                "conditions": [
                    {
                        "lastProbeTime": null,
                        "lastTransitionTime": "2018-10-04T18:54:08Z",
                        "status": "True",
                        "type": "Initialized"
                    },
                    {
                        "lastProbeTime": null,
                        "lastTransitionTime": "2018-10-18T17:51:35Z",
                        "status": "True",
                        "type": "Ready"
                    },
                    {
                        "lastProbeTime": null,
                        "lastTransitionTime": "2018-10-04T18:54:08Z",
                        "status": "True",
                        "type": "PodScheduled"
                    }
                ],
                "containerStatuses": [
                    {
                        "containerID": "docker://2a723f95b72297daa99a98c5db64fdd05dcedf03e274ffd786b01bd45c7408f1",
                        "image": "gcr.io/k8s-minikube/storage-provisioner:v1.8.1",
                        "imageID": "docker-pullable://gcr.io/k8s-minikube/storage-provisioner@sha256:088daa9fcbccf04c3f415d77d5a6360d2803922190b675cb7fc88a9d2d91985a",
                        "lastState": {
                            "terminated": {
                                "containerID": "docker://d8214d9ec671314f0f7bfe4bfbff734cd0b975d523458b4413f5840b473d2bd7",
                                "exitCode": 1,
                                "finishedAt": "2018-10-18T17:51:08Z",
                                "reason": "Error",
                                "startedAt": "2018-10-18T17:50:42Z"
                            }
                        },
                        "name": "storage-provisioner",
                        "ready": true,
                        "restartCount": 10,
                        "state": {
                            "running": {
                                "startedAt": "2018-10-18T17:51:34Z"
                            }
                        }
                    }
                ],
                "hostIP": "10.0.2.15",
                "phase": "Running",
                "podIP": "10.0.2.15",
                "qosClass": "BestEffort",
                "startTime": "2018-10-04T18:54:08Z"
            }
        },
        {
            "apiVersion": "v1",
            "kind": "Pod",
            "metadata": {
                "creationTimestamp": "2018-10-05T07:10:40Z",
                "generateName": "tiller-deploy-6fd8d857bc-",
                "labels": {
                    "app": "helm",
                    "name": "tiller",
                    "pod-template-hash": "2984841367"
                },
                "name": "tiller-deploy-6fd8d857bc-kphqv",
                "namespace": "kube-system",
                "ownerReferences": [
                    {
                        "apiVersion": "extensions/v1beta1",
                        "blockOwnerDeletion": true,
                        "controller": true,
                        "kind": "ReplicaSet",
                        "name": "tiller-deploy-6fd8d857bc",
                        "uid": "c420b6aa-c86d-11e8-8ef3-08002710109d"
                    }
                ],
                "resourceVersion": "154378",
                "selfLink": "/api/v1/namespaces/kube-system/pods/tiller-deploy-6fd8d857bc-kphqv",
                "uid": "c4253c2c-c86d-11e8-8ef3-08002710109d"
            },
            "spec": {
                "automountServiceAccountToken": true,
                "containers": [
                    {
                        "env": [
                            {
                                "name": "TILLER_NAMESPACE",
                                "value": "kube-system"
                            },
                            {
                                "name": "TILLER_HISTORY_MAX",
                                "value": "0"
                            }
                        ],
                        "image": "gcr.io/kubernetes-helm/tiller:v2.11.0",
                        "imagePullPolicy": "IfNotPresent",
                        "livenessProbe": {
                            "failureThreshold": 3,
                            "httpGet": {
                                "path": "/liveness",
                                "port": 44135,
                                "scheme": "HTTP"
                            },
                            "initialDelaySeconds": 1,
                            "periodSeconds": 10,
                            "successThreshold": 1,
                            "timeoutSeconds": 1
                        },
                        "name": "tiller",
                        "ports": [
                            {
                                "containerPort": 44134,
                                "name": "tiller",
                                "protocol": "TCP"
                            },
                            {
                                "containerPort": 44135,
                                "name": "http",
                                "protocol": "TCP"
                            }
                        ],
                        "readinessProbe": {
                            "failureThreshold": 3,
                            "httpGet": {
                                "path": "/readiness",
                                "port": 44135,
                                "scheme": "HTTP"
                            },
                            "initialDelaySeconds": 1,
                            "periodSeconds": 10,
                            "successThreshold": 1,
                            "timeoutSeconds": 1
                        },
                        "resources": {},
                        "terminationMessagePath": "/dev/termination-log",
                        "terminationMessagePolicy": "File",
                        "volumeMounts": [
                            {
                                "mountPath": "/var/run/secrets/kubernetes.io/serviceaccount",
                                "name": "default-token-gjrqf",
                                "readOnly": true
                            }
                        ]
                    }
                ],
                "dnsPolicy": "ClusterFirst",
                "nodeName": "minikube",
                "restartPolicy": "Always",
                "schedulerName": "default-scheduler",
                "securityContext": {},
                "serviceAccount": "default",
                "serviceAccountName": "default",
                "terminationGracePeriodSeconds": 30,
                "tolerations": [
                    {
                        "effect": "NoExecute",
                        "key": "node.kubernetes.io/not-ready",
                        "operator": "Exists",
                        "tolerationSeconds": 300
                    },
                    {
                        "effect": "NoExecute",
                        "key": "node.kubernetes.io/unreachable",
                        "operator": "Exists",
                        "tolerationSeconds": 300
                    }
                ],
                "volumes": [
                    {
                        "name": "default-token-gjrqf",
                        "secret": {
                            "defaultMode": 420,
                            "secretName": "default-token-gjrqf"
                        }
                    }
                ]
            },
            "status": {
                "conditions": [
                    {
                        "lastProbeTime": null,
                        "lastTransitionTime": "2018-10-05T07:10:40Z",
                        "status": "True",
                        "type": "Initialized"
                    },
                    {
                        "lastProbeTime": null,
                        "lastTransitionTime": "2018-10-18T17:50:03Z",
                        "status": "True",
                        "type": "Ready"
                    },
                    {
                        "lastProbeTime": null,
                        "lastTransitionTime": "2018-10-05T07:10:40Z",
                        "status": "True",
                        "type": "PodScheduled"
                    }
                ],
                "containerStatuses": [
                    {
                        "containerID": "docker://e6932b5586a66549539c01367cbcb16c6e7e36a97d471de6a9e7a9ff1c57e1c6",
                        "image": "gcr.io/kubernetes-helm/tiller:v2.11.0",
                        "imageID": "docker-pullable://gcr.io/kubernetes-helm/tiller@sha256:f6d8f4ab9ba993b5f5b60a6edafe86352eabe474ffeb84cb6c79b8866dce45d1",
                        "lastState": {
                            "terminated": {
                                "containerID": "docker://935e5bb8f19d44d8cfa2809f94cc62a99f2534b1f0e9d4ec58371e70b20b3174",
                                "exitCode": 255,
                                "finishedAt": "2018-10-18T17:49:18Z",
                                "reason": "Error",
                                "startedAt": "2018-10-11T06:07:22Z"
                            }
                        },
                        "name": "tiller",
                        "ready": true,
                        "restartCount": 4,
                        "state": {
                            "running": {
                                "startedAt": "2018-10-18T17:49:56Z"
                            }
                        }
                    }
                ],
                "hostIP": "10.0.2.15",
                "phase": "Running",
                "podIP": "172.17.0.4",
                "qosClass": "BestEffort",
                "startTime": "2018-10-05T07:10:40Z"
            }
        },
        {
            "apiVersion": "extensions/v1beta1",
            "kind": "NetworkPolicy",
            "metadata": {
                "creationTimestamp": "2018-10-29T08:01:36Z",
                "generation": 1,
                "name": "default-deny",
                "namespace": "default",
                "resourceVersion": "270973",
                "selfLink": "/apis/extensions/v1beta1/namespaces/default/networkpolicies/default-deny",
                "uid": "dbbc7761-db50-11e8-9699-08002710109d"
            },
            "spec": {
                "podSelector": {},
                "policyTypes": [
                    "Ingress",
                    "Egress"
                ]
            }
        },
        {
            "apiVersion": "extensions/v1beta1",
            "kind": "NetworkPolicy",
            "metadata": {
                "creationTimestamp": "2018-11-02T23:53:22Z",
                "generation": 1,
                "name": "egress-isolated",
                "namespace": "egress-isolated",
                "resourceVersion": "420945",
                "selfLink": "/apis/extensions/v1beta1/namespaces/egress-isolated/networkpolicies/egress-isolated",
                "uid": "7b251d7b-defa-11e8-9699-08002710109d"
            },
            "spec": {
                "podSelector": {},
                "policyTypes": [
                    "Egress"
                ]
            }
        },
        {
            "apiVersion": "extensions/v1beta1",
            "kind": "NetworkPolicy",
            "metadata": {
                "creationTimestamp": "2018-11-02T23:53:22Z",
                "generation": 1,
                "name": "isolated",
                "namespace": "ingress-isolated",
                "resourceVersion": "420943",
                "selfLink": "/apis/extensions/v1beta1/namespaces/ingress-isolated/networkpolicies/isolated",
                "uid": "7b0d1680-defa-11e8-9699-08002710109d"
            },
            "spec": {
                "podSelector": {},
                "policyTypes": [
                    "Ingress"
                ]
            }
        },
        {
            "apiVersion": "extensions/v1beta1",
            "kind": "NetworkPolicy",
            "metadata": {
                "creationTimestamp": "2018-11-02T23:53:22Z",
                "generation": 1,
                "name": "isolated",
                "namespace": "isolated",
                "resourceVersion": "420941",
                "selfLink": "/apis/extensions/v1beta1/namespaces/isolated/networkpolicies/isolated",
                "uid": "7af5b26c-defa-11e8-9699-08002710109d"
            },
            "spec": {
                "podSelector": {},
                "policyTypes": [
                    "Ingress",
                    "Egress"
                ]
            }
        }
    ],
    "kind": "List",
    "metadata": {
        "resourceVersion": "",
        "selfLink": ""
    }
}
